Delete unused Home components and add Support section.
Removed redundant components like PopularCarBrands, PopularSizes, Reviews, and TopBrands to declutter the Home. Introduced a new Support section with a contact manager form, updated translations, and applied mobile-responsive styles for better user experience.

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -232,7 +232,9 @@
     "used": "Б/У",
     "selection of tires and wheels": "Подбор шин и дисков",
     "light tires": "Легковые шины",
-    "tire repair": "Ремонт шин"
+    "tire repair": "Ремонт шин",
+    "contact manager": "Звонок с менеджером",
+    "what information interested": "Какая информация Вас интересует?"
   },
   "QuickOrder": {
     "quick order": "Быстрый заказ",
