--- a/locales/uk.json
+++ b/locales/uk.json
@@ -233,7 +233,9 @@
     "used": "Б/У",
     "selection of tires and wheels": "Підбір шин та дисків",
     "light tires": "Легкові шини",
-    "tire repair": "Ремонт шин"
+    "tire repair": "Ремонт шин",
+    "contact manager": "Звʼязок з менеджером",
+    "what information interested": "Яка інформація Вас цікавить?"
   },
   "QuickOrder": {
     "quick order": "Швидке замовлення",
