--- a/locales/ru.json
+++ b/locales/ru.json
@@ -234,7 +234,8 @@
     "light tires": "Легковые шины",
     "tire repair": "Ремонт шин",
     "contact manager": "Звонок с менеджером",
-    "what information interested": "Какая информация Вас интересует?"
+    "what information interested": "Какая информация Вас интересует?",
+    "send": "Отправить"
   },
   "QuickOrder": {
     "quick order": "Быстрый заказ",
