--- a/locales/uk.json
+++ b/locales/uk.json
@@ -235,7 +235,8 @@
     "light tires": "Легкові шини",
     "tire repair": "Ремонт шин",
     "contact manager": "Звʼязок з менеджером",
-    "what information interested": "Яка інформація Вас цікавить?"
+    "what information interested": "Яка інформація Вас цікавить?",
+    "send": "Надіслати"
   },
   "QuickOrder": {
     "quick order": "Швидке замовлення",
